Fixing ui to include transactions and entries.

--- a/Main.resx
+++ b/Main.resx
@@ -57,4 +57,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="icons_list.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="icons_list.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAlA8AAAJNU0Z0AUkBTAIBAQMB
+        AAEQAQIBEAECASABAAEgAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAYADAAEgAwABAQEAAQgG
+        AAEQGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEAAfABygGmAQABMwUAATMB
+        AAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEAAYABfAH/AQACUAH/AQAB
+        kwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFmAwABmQMAAcwCAAEzAwAC
+        MwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZAgABZgHMAgABZgH/AgAB
+        mQMAAZkBMwIAAZkBZgIAApkCAAGZAcwCAAGZAf8CAAHMAwABzAEzAgABzAFmAgABzAGZAgACzAIAAcwB
+        /wIAAf8BZgIAAf8BmQIAAf8BzAEAATMB/wIAAf8BAAEzAQABMwEAAWYBAAEzAQABmQEAATMBAAHMAQAB
+        MwEAAf8BAAH/ATMCAAMzAQACMwFmAQACMwGZAQACMwHMAQACMwH/AQABMwFmAgABMwFmATMBAAEzAmYB
+        AAEzAWYBmQEAATMBZgHMAQABMwFmAf8BAAEzAZkCAAEzAZkBMwEAATMBmQFmAQABMwKZAQABMwGZAcwB
+        AAEzAZkB/wEAATMBzAIAATMBzAEzAQABMwHMAWYBAAEzAcwBmQEAATMCzAEAATMBzAH/AQABMwH/ATMB
+        AAEzAf8BZgEAATMB/wGZAQABMwH/AcwBAAEzAv8BAAFmAwABZgEAATMBAAFmAQABZgEAAWYBAAGZAQAB
+        ZgEAAcwBAAFmAQAB/wEAAWYBMwIAAWYCMwEAAWYBMwFmAQABZgEzAZkBAAFmATMBzAEAAWYBMwH/AQAC
+        ZgIAAmYBMwEAA2YBAAJmAZkBAAJmAcwBAAFmAZkCAAFmAZkBMwEAAWYBmQFmAQABZgKZAQABZgGZAcwB
+        AAFmAZkB/wEAAWYBzAIAAWYBzAEzAQABZgHMAZkBAAFmAswBAAFmAcwB/wEAAWYB/wIAAWYB/wEzAQAB
+        ZgH/AZkBAAFmAf8BzAEAAcwBAAH/AQAB/wEAAcwBAAKZAgABmQEzAZkBAAGZAQABmQEAAZkBAAHMAQAB
+        mQMAAZkCMwEAAZkBAAFmAQABmQEzAcwBAAGZAQAB/wEAAZkBZgIAAZkBZgEzAQABmQEzAWYBAAGZAWYB
+        mQEAAZkBZgHMAQABmQEzAf8BAAKZATMBAAKZAWYBAAOZAQACmQHMAQACmQH/AQABmQHMAgABmQHMATMB
+        AAFmAcwBZgEAAZkBzAGZAQABmQLMAQABmQHMAf8BAAGZAf8CAAGZAf8BMwEAAZkBzAFmAQABmQH/AZkB
+        AAGZAf8BzAEAAZkC/wEAAcwDAAGZAQABMwEAAcwBAAFmAQABzAEAAZkBAAHMAQABzAEAAZkBMwIAAcwC
+        MwEAAcwBMwFmAQABzAEzAZkBAAHMATMBzAEAAcwBMwH/AQABzAFmAgABzAFmATMBAAGZAmYBAAHMAWYB
+        mQEAAcwBZgHMAQABmQFmAf8BAAHMAZkCAAHMAZkBMwEAAcwBmQFmAQABzAKZAQABzAGZAcwBAAHMAZkB
+        /wEAAswCAALMATMBAALMAWYBAALMAZkBAAPMAQACzAH/AQABzAH/AgABzAH/ATMBAAGZAf8BZgEAAcwB
+        /wGZAQABzAH/AcwBAAHMAv8BAAHMAQABMwEAAf8BAAFmAQAB/wEAAZkBAAHMATMCAAH/AjMBAAH/ATMB
+        ZgEAAf8BMwGZAQAB/wEzAcwBAAH/ATMB/wEAAf8BZgIAAf8BZgEzAQABzAJmAQAB/wFmAZkBAAH/AWYB
+        zAEAAcwBZgH/AQAB/wGZAgAB/wGZATMBAAH/AZkBZgEAAf8CmQEAAf8BmQHMAQAB/wGZAf8BAAH/AcwC
+        AAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEAAcwB/wFmAQAC/wGZAQAC
+        /wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEAASEBAAGlAQADXwEAA3cB
+        AAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7Af8BAAGkAqABAAOAAwAB
+        /wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA///AAUAAf8B9ALzEvIB8wH0Af8GAAH/AfQC8xHyAfNL
+        AAH0Ae8BbQEQEgABQwHsAfAGAAHyAZIBEwEOEQABbUsAAfQB7AFDAQ4SAAEOARMB7wYAAfABbQEOEgAB
+        bQ8AAf8C8AHzOAAB8wFDAQ4BbRLvAUMBDwHsBgABBwERAQAB7RHvAfAOAAH0AfACbQHvAfM3AAHyAgAB
+        7xIAAW0BAAFtBgAB7wIAAfIfAAH/AfAB6wEAAUMB7QHyNwAB8gIAAe8SAAFtAQABbQYAAe8CAAHyHwAB
+        8AFtAgAB9wHzOAAB8gIAAe8CAAH3CG0B8AYAAW0BAAFtBgAB7wIAAfIBAAH/AfAB9wHsD20B7AH3AfAB
+        /wUAAf8B8AFtAQ8BQwHvAfMB/zgAAfICAAHvAgABbQgAAe8GAAFtAQABbQYAAe8CAAHyAQAB9AHtARQB
+        Dg8AAQ4BFAHtAfQEAAH0AfABbQEPAQABEAHsEu8B8CcAAfICAAHvAgAB9whtAfAGAAFtAQABbQYAAe8C
+        AAHyAQAB8wESAQ4BQw9tAUMBDgESAfMEAAHyAe0XAAFtJwAB8gIAAe8SAAFtAQABbQYAAe8CAAHyAQAB
+        8gIAAe8PAAHvAgAB8gQAAfIB7RcAAW0nAAHyAgAB7xIAAW0BAAFtBgAB7wIAAfIBAAHyAgAB7w8AAe8C
+        AAHyBAAB/wHyAe0BEQEAAUMB7wHxEfIB8ycAAfICAAHvAgAB8AzvAfICAAFtAQABbQYAAe8CAAHyAQAB
+        8gIAAe8GAAHwAe8B8AYAAe8CAAHyBQAB/wHyAe0BQwEQAewB8QH/OAAB8gIAAe8CAAFtDAAB7wIAAW0B
+        AAFtBgAB7wIAAfIBAAHyAgAB7wYAAW0BAAFtBgAB7wIAAfIHAAHyAe0BEQEAAewB8AH/CQAB/wH0Af8r
+        AAHyAgAB7wIAAW0MAAHvAgABbQEAAW0GAAHvAgAB8gEAAfICAAHvBgABbQEAAW0GAAHvAgAB8ggAAfIB
+        7QIAAW0B8AkAAfAB7wHwKwAB8gIAAe8CAAHzDPIB9AIAAW0BAAFtBgAB7wIAAfIBAAHyAgAB7wYAAW0B
+        AAFtBgAB7wIAAfIIAAH/AfIC7QHwAf8HAAH/AfABbQFDAW0B8AH/KQAB8gIAAe8SAAFtAQABbQYAAe8C
+        AAHyAQAB8gIAAe8CAAHwA+8BQwEAAUMD7wHwAgAB7wIAAfIJAAH/AvIB9AgAAf8B8gGSARUBDwFtAfAB
+        9CgAAfICAAHtEvIBEgEAAW0GAAHvAgAB8gEAAfICAAHvAgABbQkAAW0CAAHvAgAB8hcAAfIBkgFDAQAB
+        6wHwAf8nAAHyFwABbQYAAe8CAAHyAQAB8gIAAe8CAAFtCQABbQIAAe8CAAHyGAAB9AHvAgABbQHwJwAB
+        8hcAAW0GAAHvAgAB8gEAAfICAAHvAgAB8wPyARIBAAESA/IB8wIAAe8CAAHyBQAB8xJtARIBQwIAAQ8B
+        bQHwAf8lAAHyAgABbRLvAUMBAAFtBgAB7wIAAfIBAAHyAgAB7wYAAW0BAAFtBgAB7wIAAfIFAAHyFwAB
+        QwHvAfQlAAHyAgAB7xIAAW0BAAFtBgAB7wIAAfIBAAHyAgAB7wYAAW0BAAFtBgAB7wIAAfIFAAHzEm0B
+        EgFDAgABDwFtAfAB/yUAAfICAAHvEgABbQEAAW0GAAHvAgAB8gEAAfICAAHvBgABbQEAAW0GAAHvAgAB
+        8hgAAfQB7wIAAW0B8CcAAfMBQwEOAUMSbQIPAewGAAH0AvIB/wEAAfICAAHvBgAB8wHyAfMGAAHvAgAB
+        8hcAAfIBkgFDAQAB6wHwAf8nAAH0AewBEwEPEgABEQHqAe8LAAHyAgAB7w8AAe8CAAHyFQAB/wHyAZIB
+        FQEPAW0B8AH0KAAB/wHwAe8B7AESAgABQwptAQ8BAAEPAW0B7QEHAfILAAHzAQ4BAAHtD/IB7QEAAQ4B
+        8xUAAf8B8AFtAUMBbQHwAf8tAAHyAgAB7woAAW0BAAFtDwAB8wETAQ4RAAEOARMB8xcAAfAB7wHwLwAB
+        8gIAAe8KAAFtAQABbQ8AAfQBkgFtAREPAAERAW0BkgH0FwAB/wH0Af8vAAH0Au8B8goAAfAB7wHwDwAB
+        /wHyAfABBw/vAQcB8AHyAf//AEMAAUIBTQE+BwABPgMAASgDAAGAAwABIAMAAQEBAAEBBgABAhYAA/8B
+        AAz/BAAM/wQAAeACAAEPAcACAAX/BAAB4AIAAQ8BwAIABf8EAAHgAgABDwHAAgAB/wH+AR8C/wQAAeAC
+        AAEPAcACAAH/AfwBDwL/BAAB4QL/AY8BwwP/AfgBDwL/BAAB4QL/AY8BwwP/AfgBHwL/BAAB4QGAAR8B
+        jwHCAgABAwHgAR8C/wQAAeEBgAEfAY8BwgIAAQMBwAIAAQ8EAAHhAYABHwGPAcICAAEDAcACAAEPBAAB
+        4QL/AY8BwgEfAf8BwwHAAgABDwQAAeEC/wGPAcIBHwH/AcMBwAIAAQ8EAAHhAYABAQGPAcIBHwGPAcMB
+        4AEfAv8EAAHhAYABAQGPAcIBHwGPAcMB+AEPAfgB/wQAAeEBgAEBAY8BwgEfAY8BwwH8AQ8B+AH/BAAB
+        4QGAAQEBjwHCAR8BjwHDAfwBDwHgAT8EAAHhAv8BjwHCARgBAAHDAf4BHwHgAR8EAAHgAgABDwHCARgB
+        AAHDAv8B+AEPBAAB4AIAAQ8BwgEYAQABwwL/AfwBDwQAAeACAAEPAcIBGAEAAcMB4AIAAQMEAAHgAgAB
+        DwHCAR8BjwHDAeACAAEDBAAB4QL/AY8BwgEfAY8BwwHgAgABAwQAAeEC/wGPAcIBHwGPAcMC/wH8AQ8E
+        AAHgAgABDwHCAR8BjwHDAv8B+AEPBAAB4AIAAQ8B/gEfAf8BwwL/AeABHwQAAeACAAEPAf4CAAEDAv8B
+        4AE/BAAB/gEfAfgB/wH+AgABAwL/AfgB/wQAAf4BHwH4Af8B/gIAAQMC/wH4Af8EAAH+AR8B+AH/Af4C
+        AAEDBP8EAAz/BAAM/wQACw==
+</value>
+  </data>
 </root>
